add server, db setup and passport authorization

--- a/pages/rooms/rooms.module.scss
+++ b/pages/rooms/rooms.module.scss
@@ -40,7 +40,8 @@
 
 .content {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
   align-items: flex-start;
+  gap: 1rem;
 }
