--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,7 @@ a {
 .btn {
   transition: .2s;
   font-family: 'Nunito', sans-serif;
+  cursor: pointer;
 }
 .btn:active {
   transform: translateY(3px);
