--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,7 @@ a {
   transition: .2s;
   font-family: 'Nunito', sans-serif;
   cursor: pointer;
+  font-size: 16px;
 }
 .btn:active {
   transform: translateY(3px);
